@@ -2,6 +2,7 @@ package tpFinal.poo2;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 
 public class FiltroExcluirCategorias implements Filtro{
@@ -17,6 +18,6 @@ public class FiltroExcluirCategorias implements Filtro{
 		public List<Proyecto> filtrar(List<Proyecto> proyectos) {
 			List<String> filtroNombres = categorias.stream().map(n -> n.getNombre()).toList();
 			
-			return proyectos.stream().filter(d ->Collections.disjoint((d.categorias.stream().map(n -> n.getNombre()).toList()), filtroNombres)).toList();
+			return proyectos.stream().filter(d ->Collections.disjoint((d.categorias.stream().map(n -> n.getNombre()).toList()), filtroNombres)).collect(Collectors.toList());
 		}//si el proyecto no contiene ninguna de las categorias que me interesa, me las devuelve
 }
