@@ -2,6 +2,7 @@ package tpFinal.poo2;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class FiltroIncluirCategorias implements Filtro{
 	private List<Categoria> categorias;
@@ -14,7 +15,7 @@ public class FiltroIncluirCategorias implements Filtro{
 	@Override
 	public List<Proyecto> filtrar(List<Proyecto> proyectos) {
 		List<String> filtroNombres = categorias.stream().map(n -> n.getNombre()).toList();
-		return proyectos.stream().filter(d -> !Collections.disjoint((d.categorias.stream().map( n -> n.getNombre()).toList()), filtroNombres)).toList();
+		return proyectos.stream().filter(d -> !Collections.disjoint((d.categorias.stream().map( n -> n.getNombre()).toList()), filtroNombres)).collect(Collectors.toList());
 	
 	}
 	
